[package]
name = "noted"
version = "0.1.0"
edition = "2021"
description = "A simple tool to leave yourself notes in directories"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
